Fixed score prompt on mobile/desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ abbr:hover {
 
 .sort-dropdown-container {
   text-align:right;
-  margin-bottom:10px;
+  margin-bottom:20px;
 }
 
 .leaderboard-container {
